# Giving-Tuesday-GUI

./: .gitignore  .gitignore.txt  CMakeLists.txt  LICENSE.md.txt
lib/include/: csvstream.hh
lib/lib/: xlnt.lib
lib/xlnt/debug/lib/: xlntd.lib
lib/xlnt/share/xlnt/: XlntConfigVersion.cmake  XlntTargets-debug.cmake  XlntTargets.cmake  vcpkg_abi_info.txt
src/: basic_types.cpp  command_line_handler.cpp  command_line_interface.cpp  command_line_main.cpp  io.cpp  main.cpp  matching.cpp
src/Analysis/: analysis.hpp  basic_types.cpp  basic_types.h  criterion_parser.cpp  criterion_parser.h  matching.cpp  matching.h  matching_base.h
src/Command_Line_UI/: command_line_interface.cpp  command_line_interface.h  command_line_ui.cpp  command_line_ui.h  ui.hpp
src/File_IO/: csv_io.cpp  csv_io.h  file_io.hpp
src/include/: basic_types.h  command_line_handler.h  command_line_interface.h  excel_io.h  io.h  matching.h
test/: compile_check.cpp  test_io.cpp
